# IDiOM

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE.md  README.md  compute_reduction.py  compute_reduction_eng.py  create_lda_month.py  fix_topic_modeling.py  news_post_process.py  pyproject.toml  server.py
configuration/: configuration.yaml
core_modules/named_entity_recognition/: named_entity_recognition.py
core_modules/news_analyzer/: news_analyzer.py
core_modules/topic_extraction/: Create LDA Model.ipynb  Create LDA Model.py  Test load LDA Model.ipynb  custom_stop_words.json  data.json  doc_topic.json  lda_module.py  lda_test.py  lda_utils.py  nlp_utils.py
core_modules/topic_extraction/lda_checkpoint/: lda_model_de.pickle  lda_model_nl.pickle
core_modules/topic_extraction/lda_checkpoint/lda_es/: lda_es_12_2020.pickle
core_modules/topic_extraction/lda_checkpoint/lda_fr/: lda_fr_11_2020.pickle  lda_fr_12_2020.pickle
core_modules/topic_extraction/lda_checkpoint/lda_it/: lda_it_12_2020.pickle
core_modules/topic_extraction/lda_checkpoint/lda_nl/: lda_nl_01_2020.pickle  lda_nl_02_2020.pickle  lda_nl_03_2020.pickle  lda_nl_04_2020.pickle  lda_nl_05_2020.pickle  lda_nl_06_2020.pickle  lda_nl_07_2020.pickle  lda_nl_08_2020.pickle  lda_nl_09_2020.pickle  lda_nl_10_2020.pickle  lda_nl_11_2020.pickle  lda_nl_12_2020.pickle
core_modules/topic_extraction/lda_checkpoint_backup/: lda_model_de.pickle  lda_model_en.pickle  lda_model_es.pickle  lda_model_fr.pickle  lda_model_it.pickle  lda_model_nl.pickle
core_modules/triple_extraction/: triples_extraction.py  triples_test.py
representations/: graphs.py
scraping/: news_scraper.py  scheduled_scraping_handler.py
scraping/data/: articles.json
test_modules/: Dimensionality Reduction.ipynb  create_lda_month.py  fix_topic_modeling.py
utils/: db_handler.py  most_frequent_words.py
